Update Route Points
